cartopy/docs/v0.17/_sources/cartopy_outline.rst.txt

cartopy
*******

.. currentmodule:: cartopy

.. csv-table::


	:py:obj:`config`

cartopy.crs
***********

.. currentmodule:: cartopy.crs

.. csv-table::


	:py:obj:`CRS`, :py:obj:`Geocentric`, :py:obj:`Geodetic`, :py:obj:`Globe`
	:py:obj:`OSGB`, :py:obj:`OSNI`, :py:obj:`UTM`, :py:obj:`AlbersEqualArea`
	:py:obj:`AzimuthalEquidistant`, :py:obj:`EckertI`, :py:obj:`EckertII`, :py:obj:`EckertIII`
	:py:obj:`EckertIV`, :py:obj:`EckertV`, :py:obj:`EckertVI`, :py:obj:`EqualEarth`
	:py:obj:`EquidistantConic`, :py:obj:`EuroPP`, :py:obj:`Geostationary`, :py:obj:`Gnomonic`
	:py:obj:`InterruptedGoodeHomolosine`, :py:obj:`LambertAzimuthalEqualArea`, :py:obj:`LambertConformal`, :py:obj:`LambertCylindrical`
	:py:obj:`Mercator`, :py:obj:`Miller`, :py:obj:`Mollweide`, :py:obj:`NearsidePerspective`
	:py:obj:`NorthPolarStereo`, :py:obj:`Orthographic`, :py:obj:`PlateCarree`, :py:obj:`Projection`
	:py:obj:`Robinson`, :py:obj:`RotatedPole`, :py:obj:`Sinusoidal`, :py:obj:`SouthPolarStereo`
	:py:obj:`Stereographic`, :py:obj:`TransverseMercator`, :py:obj:`GOOGLE_MERCATOR`, :py:obj:`epsg`
	:py:obj:`RotatedGeodetic`

cartopy.img_transform
*********************

.. currentmodule:: cartopy.img_transform

.. csv-table::


	:py:obj:`mesh_projection`, :py:obj:`regrid`, :py:obj:`warp_array`, :py:obj:`warp_img`

cartopy.trace
*************

.. currentmodule:: cartopy.trace

.. csv-table::


	:py:obj:`project_linear`

cartopy.util
************

.. currentmodule:: cartopy.util

.. csv-table::


	:py:obj:`add_cyclic_point`

cartopy.vector_transform
************************

.. currentmodule:: cartopy.vector_transform

.. csv-table::


	:py:obj:`vector_scalar_to_grid`

cartopy.feature
***************

.. currentmodule:: cartopy.feature

.. csv-table::


	:py:obj:`Feature`, :py:obj:`GSHHSFeature`, :py:obj:`NaturalEarthFeature`, :py:obj:`ShapelyFeature`
	:py:obj:`WFSFeature`, :py:obj:`BORDERS`, :py:obj:`COASTLINE`, :py:obj:`LAKES`
	:py:obj:`LAND`, :py:obj:`OCEAN`, :py:obj:`RIVERS`, :py:obj:`STATES`
	:py:obj:`AdaptiveScaler`, :py:obj:`Scaler`

cartopy.feature.nightshade
**************************

.. currentmodule:: cartopy.feature.nightshade

.. csv-table::


	:py:obj:`Nightshade`

cartopy.geodesic
****************

.. currentmodule:: cartopy.geodesic

.. csv-table::


	:py:obj:`Geodesic`

cartopy.io
**********

.. currentmodule:: cartopy.io

.. csv-table::


	:py:obj:`fh_getter`, :py:obj:`DownloadWarning`, :py:obj:`Downloader`, :py:obj:`LocatedImage`
	:py:obj:`PostprocessedRasterSource`, :py:obj:`RasterSource`, :py:obj:`RasterSourceContainer`

cartopy.io.img_nest
*******************

.. currentmodule:: cartopy.io.img_nest

.. csv-table::


	:py:obj:`ImageCollection`, :py:obj:`Img`, :py:obj:`NestedImageCollection`

cartopy.io.img_tiles
********************

.. currentmodule:: cartopy.io.img_tiles

.. csv-table::


	:py:obj:`OSM`, :py:obj:`GoogleTiles`, :py:obj:`GoogleWTS`, :py:obj:`MapQuestOSM`
	:py:obj:`MapQuestOpenAerial`, :py:obj:`MapboxStyleTiles`, :py:obj:`MapboxTiles`, :py:obj:`QuadtreeTiles`
	:py:obj:`Stamen`, :py:obj:`StamenTerrain`

cartopy.io.ogc_clients
**********************

.. currentmodule:: cartopy.io.ogc_clients

.. csv-table::


	:py:obj:`WFSGeometrySource`, :py:obj:`WMSRasterSource`, :py:obj:`WMTSRasterSource`

cartopy.io.shapereader
**********************

.. currentmodule:: cartopy.io.shapereader

.. csv-table::


	:py:obj:`Reader`, :py:obj:`Record`

cartopy.io.srtm
***************

.. currentmodule:: cartopy.io.srtm

.. csv-table::


	:py:obj:`SRTM3_retrieve`, :py:obj:`add_shading`, :py:obj:`fill_gaps`, :py:obj:`read_SRTM`
	:py:obj:`read_SRTM1`, :py:obj:`read_SRTM3`, :py:obj:`srtm`, :py:obj:`srtm_composite`
	:py:obj:`SRTM1Source`, :py:obj:`SRTM3Source`, :py:obj:`SRTMDownloader`

cartopy.mpl
***********

.. currentmodule:: cartopy.mpl



cartopy.mpl.clip_path
*********************

.. currentmodule:: cartopy.mpl.clip_path

.. csv-table::


	:py:obj:`bbox_to_path`, :py:obj:`clip_path`, :py:obj:`intersection_point`, :py:obj:`lines_intersect`

cartopy.mpl.feature_artist
**************************

.. currentmodule:: cartopy.mpl.feature_artist

.. csv-table::


	:py:obj:`FeatureArtist`

cartopy.mpl.geoaxes
*******************

.. currentmodule:: cartopy.mpl.geoaxes

.. csv-table::


	:py:obj:`GeoAxes`, :py:obj:`GeoAxesSubplot`, :py:obj:`InterProjectionTransform`

cartopy.mpl.gridliner
*********************

.. currentmodule:: cartopy.mpl.gridliner

.. csv-table::


	:py:obj:`Gridliner`

cartopy.mpl.patch
*****************

.. currentmodule:: cartopy.mpl.patch

.. csv-table::


	:py:obj:`geos_to_path`, :py:obj:`path_segments`, :py:obj:`path_to_geos`

cartopy.mpl.slippy_image_artist
*******************************

.. currentmodule:: cartopy.mpl.slippy_image_artist

.. csv-table::


	:py:obj:`SlippyImageArtist`

cartopy.mpl.ticker
******************

.. currentmodule:: cartopy.mpl.ticker

.. csv-table::


	:py:obj:`LatitudeFormatter`, :py:obj:`LongitudeFormatter`
